--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
             <a href="https://timino2700.github.io/osusky-architekti-projekty/">Projekty</a>
             <div class="social-icons">
                 <a href="https://www.instagram.com/your-instagram-profile" target="_blank"><img src="https://timino2700.github.io/osusky-architekti/instagram.png" alt="Instagram"></a>
-                <a href="https://www.facebook.com/your-facebook-page" target="_blank"><img src="https://timino2700.github.io/osusky-architekti/facebook.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/osusky.architekti/" target="_blank"><img src="https://timino2700.github.io/osusky-architekti/facebook.png" alt="Facebook"></a>
             </div>
         </nav>
         <div class="menu-icon">&#9776;</div> <!-- Menu icon symbol -->
     </header>
 
     <footer>
-        <p>2024 &copy; Osuský Architekti, s.r.o. All rights reserved.</p>
+        <p> &copy; 2024  Osuský Architekti, s.r.o. All rights reserved.</p>
     </footer>
 
     <script>
